# my_agent_arc

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
data/: agents.md  boot.md  bootstrap.md  heartbeat.md  identity.md  mcp_servers.json  soul.md  tools.md  user.md
docs/: PLAN.md  guide.md  starter_prompt.md
docs/plans/: 2025-07-18-comprehensive-documentation.md  2026-02-28-docker-execution-design.md  2026-02-28-docker-execution-implementation.md  2026-02-28-mcp-implementation.md  2026-02-28-mcp-integration-design.md  2026-02-28-self-authoring-skills-design.md  2026-03-01-pep723-uv-run-design.md  2026-03-01-pep723-uv-run-implementation.md
scripts/: arc.service  install.sh
src/arc/: __init__.py  admin.py  agent.py  config.py  context_manager.py  database.py  gateway.py  main.py  mcp_client.py  memory.py  tools.py
src/openclaw/: __init__.py  admin.py  agent.py  config.py  context_manager.py  database.py  gateway.py  main.py  memory.py  tools.py
templates/: base.html  chat.html  dashboard.html  editor.html  logs.html
tests/: conftest.py  test_docker_server.py  test_tools_write_skill.py
tools/: dice_server.py  docker_server.py  get_time_server.py  test_server.py
