[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "arc"
version = "0.1.0"
description = "ARC — a single-purpose autonomous AI agent framework"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "ollama>=0.4.0",
    "chromadb>=0.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
arc = "arc.main:main"

[tool.setuptools.packages.find]
where = ["src"]
