[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc"
version = "0.1.0"
description = "ARC — a single-purpose autonomous AI agent framework"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "ollama>=0.4.0",
    "chromadb>=0.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
    "mcp[cli]>=1.0.0",
    "docker>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
arc = "arc.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
